welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:11: error: not found: value x
setPos(0,x+1)
         ^